--- a/app/assets/stylesheets/components/workspace/_workspace_modal.scss
+++ b/app/assets/stylesheets/components/workspace/_workspace_modal.scss
@@ -1,132 +1,11 @@
-@keyframes show-modal {
-  0% {
-    display      : none;
-    visibility   : hidden;
-    opacity      : 0;
-    // transform : translateY(0%);
-    top          : 100%;
-  }
-
-  70% {
-    top: 28%;
-  }
-
-  100% {
-    display      : flex;
-    visibility   : visible;
-    opacity      : 1;
-    // transform : translateY(-50%);
-  }
-}
-
 .workspace-modal {
-  z-index        : 5;
-  position       : fixed;
-  display        : flex;
-  justify-content: center;
-  align-items    : center;
-  margin         : 0 auto;
-  // top: 0;
-  // left: 0;
-  // width: 100vw;
-  // height: 100vh;
+  @include basic-modal-wrapper;
 }
 
-.modal-backdrop {
-  display         : block;
-  position        : fixed;
-  top             : 0;
-  bottom          : 0;
-  left            : 0;
-  right           : 0;
-  background-color: rgba(128, 128, 128, 0.4);
-}
+// .modal-backdrop & .modal-close in mixins.scss
 
 .workspace-modal-box {
-  display          : flex;
-  flex-direction   : column;
-  // border        : 1px solid $spacecadet;
-  border-radius    : 8px;
-  position         : fixed;
-  padding          : 40px 50px;
-  box-shadow       : 0 0 25px gray;
-  top              : 30%;
-  left             : 40%;
-  animation        : show-modal 1s ease-in-out;
-  // margin: 0 auto;
-}
-
-// #workspace-modal-top {
-  // display    : flex;
-  // position: relative;
-// }
-
-.modal-close {
-  width        : 30px;
-  height       : 30px;
-  cursor       : pointer;
-  position     : absolute;
-  top          : 8px;
-  right        : 8px;
-  opacity      : 70%;
-  border-radius: 5px;
-
-  &::before,
-  &::after {
-    content         : '';
-    width           : 4px;
-    height          : 80%;
-    background-color: black;
-    display         : block;
-    transform       : translateX(0px);
-    position        : absolute;
-    top             : 4px;
-    right           : 14px;
-    border-radius   : 2px;
-    opacity         : 70%;
-    transition      : all 0.3s ease 0s;
-
-  }
-
-  &::before {
-    transform: rotate(45deg);
-  }
-
-  &::after {
-    transform: rotate(-45deg);
-  }
-
-  >span {
-    width         : 1px;
-    height        : 1px;
-    padding       : 0;
-    margin        : -1px;
-    overflow      : hidden;
-    // white-space: nowrap;
-    // clip-path: rect(0, 0, 0, 0);
-    // border: 0;
-    position      : absolute;
-  }
-
-  &:hover {
-    background-color: rgb(238, 238, 238);
-    opacity         : 100%;
-
-    &::before,
-    &::after {
-      opacity  : 100%;
-    }
-  }
-
-  &:focus {
-    background-color: rgb(238, 238, 238);
-    opacity         : 100%;
-
-    &::before,
-    &::after {
-      opacity  : 100%;
-    }
-  }
+  @include modal-box;
 }
 
 #workspace-modal-form {
